Added functionality for exporting memo list into excel file.
Exports the list according to the search parameters, with columns presented in the table itself. Depending on the users needs, additional columns can be added to export additional data.

--- a/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
@@ -104,7 +104,10 @@
                 <br/>
                 <div class="row">
                     <div class="col-md-12">
-                        <button type="button" class="btn btn-success pull-right" (click)="search()">Search</button>
+                        <div class="btn-toolbar pull-right">
+                            <button type="button" class="btn btn-success" (click)="search()">Search</button>
+                            <button type="button" class="btn btn-success" (click)="export()">Export into excel</button>
+                        </div>
                     </div>
                 </div>
         </div>
