HF Funds nav data is taked form ITD report

--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-risk-hf.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-risk-hf.component.html
@@ -62,11 +62,11 @@
                         <td width="10%">
                             <span data-toggle="tooltip" data-placement="top" title="{{fund.nav | number: '.2'}}">{{fund.navPercent | percent: '1.2' }}</span>
                         </td>
-                        <td width="10%">{{fund.mtd | percent: '1.2' }}</td>
-                        <td width="10%">{{fund.qtd | percent: '1.2' }}</td>
-                        <td width="10%">{{fund.ytd | percent: '1.2' }}</td>
-                        <td width="10%">{{fund.contributionToYTD | percent: '1.2' }}</td>
-                        <td width="10%">{{fund.contributionToVAR | percent: '1.2' }}</td>
+                        <td width="10%">{{fund.mtd | percent: '1.2-2' }}</td>
+                        <td width="10%">{{fund.qtd | percent: '1.2-2' }}</td>
+                        <td width="10%">{{fund.ytd | percent: '1.2-2' }}</td>
+                        <td width="10%">{{fund.contributionToYTD | percent: '1.2-2' }}</td>
+                        <td width="10%">{{fund.contributionToVAR | percent: '1.2-2' }}</td>
                     </tr>
                 </tbody>
             </table>
