--- a/nicnbk-ui-angular2/src/app/tripMemo/view/trip-memo-list.component.html
+++ b/nicnbk-ui-angular2/src/app/tripMemo/view/trip-memo-list.component.html
@@ -161,6 +161,13 @@
             </tr>
             </tbody>
         </table>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="btn-toolbar pull-right">
+                        <button type="button" class="btn btn-primary" (click)="export()">Export into excel</button>
+                    </div>
+                </div>
+            </div>
             <div class="row pull-right">
                 <ul class="pagination" *ngIf="tripMemoSearchResult?.showPageFrom > 0">
                     <li><a *ngIf="tripMemoSearchResult?.showPageFrom > 1" (click)="search(tripMemoSearchResult.showPageFrom - 1)">&laquo;</a></li>
