--- a/nicnbk-ui-angular2/src/app/m2s2/view/general-memo-edit.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/general-memo-edit.component.html
@@ -118,7 +118,8 @@
                                                (data)="refreshAttendeesNIC($event)"
                                                (selected)="selected($event)"
                                                (removed)="removed($event)"
-                                               placeholder="No attendee selected"></ng-select>
+                                               placeholder="No attendee selected">
+                                    </ng-select>
                                 </div>
                             </div>
 
